--- a/src/Components/ItemBox/ItemBox.module.css
+++ b/src/Components/ItemBox/ItemBox.module.css
@@ -4,6 +4,8 @@
   width: 250px;
   /* border: 1px solid rgb(26, 73, 21); */
   background-color:beige;
+  border-radius:4px;
+  box-shadow: 0 0 4px darkgrey;
 }
   
   .box_img img{
